--- a/practica_1/c++/very 1.2
+++ b/practica_1/c++/very 1.2
@@ -9,7 +9,7 @@ using namespace std;
  * Méndez García Frank Asael
  * Reyes Casanova Luis Khaled
  * Yáñez Mancilla Jesús Osvaldo
- * Versión: 1.2.0 - Corregido por: Hernández Fuentes Nazario (Portado a C++)
+ * Versión: 1.2.0 -: Hernández Fuentes Nazario (Portado a C++)
  */
 
 int main() {
